k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments
spec:
  selector:
    app: payments
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payments
  name: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      serviceAccountName: payments
      automountServiceAccountToken: true
      containers:
        - image: ghcr.io/hashicorp-dev-advocates/workshop-spring-vault:stable
          name: payments
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: payments-config

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments
spec:
  defaultBackend:
    service:
      name: payments
      port:
        number: 8081
